# circomkit-ffi

./: .gitignore  .npmignore  Cargo.toml  README.md  TODO.md  build.ts  bun.lockb  package.json  tsconfig.json
.github/workflows/: release-lib.yaml  release-sdk.yaml  release.yaml  test-lib.yaml  test.yaml
bench/: README.md  plot.py  pyproject.toml
circuits/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
example/: .gitignore  README.md  bun.lockb  circomkit.json  circuits.json  index.ts  package.json
example/circuits/main/: multiplier_30.circom  multiplier_300.circom  multiplier_30000.circom  multiplier_300000.circom
example/inputs/multiplier_30/: default.json
example/inputs/multiplier_300/: default.json
example/inputs/multiplier_3000/: default.json
example/inputs/multiplier_30000/: default.json
example/inputs/multiplier_300000/: default.json
example/lib/: libcircomkit_ffi-macOS-arm64.dylib
example/src/: example.ts  index.ts  prove.ts
sdk/: .gitignore  README.md  build.ts  bun.lockb  bun.ts  common.ts  index.ts  interface.ts  node.ts  package.json
sdk/src/: bun.ts  common.ts  index.ts  interface.ts  node.ts
sdk/tests/: download.test.ts  ffi.test.ts
src/: entry.rs  lib.rs  proof.rs  snarkjs.rs  traits.rs  witness.rs
src/arkworks/: circom.rs  core.rs  mod.rs  proof.rs  prover.rs  snarkjs.rs
src/icicle/: mod.rs
src/lambdaworks/: mod.rs  snarkjs.rs  zkey.rs
tests/: arkworks_test.rs  download.test.ts  ffi.test.ts  lambdaworks_test.rs  rust_witness_test.rs  witnesscalc_adapter_test.rs
tests/res/: arkworks_mul3_proof.json  arkworks_mul3_public.json  lambdaworks_mul3_proof.json  lambdaworks_mul3_public.json  mul3.r1cs.json  mul3.wtns  mul3.wtns.json  mul30.r1cs  mul30_groth16.zkey  mul3_groth16.zkey  mul3_groth16_vkey.json
tests/rw/: .gitignore  handlers.c
tests/wc/: .gitignore  multiplier_3.cpp
