[package]
name = "circomkit-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# lambdaworks
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks" }
lambdaworks-circom-adapter = { git = "https://github.com/lambdaclass/lambdaworks" }
lambdaworks-groth16 = { git = "https://github.com/lambdaclass/lambdaworks" }

# arkworks
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat" }
ark-crypto-primitives = { version = "0.4.0" }
ark-ec = { version = "0.4.2", default-features = false, features = [
    "parallel",
] }
ark-ff = { version = "0.4.2", default-features = false, features = [
    "parallel",
    "asm",
] }
ark-std = { version = "0.4.0", default-features = false, features = [
    "parallel",
] }
ark-bn254 = { version = "0.4.0" }
ark-groth16 = { version = "0.4.0", default-features = false, features = [
    "parallel",
] }
ark-poly = { version = "0.4.2", default-features = false, features = [
    "parallel",
] }
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }

# utils
rand = "0.8.5"
eyre = "0.6.12"
serde = "1.0.217"
serde_json = "1.0.134"
num-bigint = "0.4.6"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
