[package]
name = "circomkit-ffi"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["erhant"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# only enable the witness-gen feature for witness generation functionality
# which is not working yet, and breaks tests as well due to build-level stuff
witness-gen = ["paste", "rust-witness", "witnesscalc-adapter"]

[dependencies]
# lambdaworks
lambdaworks-math = { git = "https://github.com/erhant/lambdaworks", branch = "erhant/fix-circom-adapter" }
lambdaworks-circom-adapter = { git = "https://github.com/erhant/lambdaworks", branch = "erhant/fix-circom-adapter" }
lambdaworks-groth16 = { git = "https://github.com/erhant/lambdaworks", branch = "erhant/fix-circom-adapter" }

# arkworks
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat" }
ark-crypto-primitives = { version = "0.5.0" }
ark-ec = { version = "0.5.0", default-features = false, features = [
  "parallel",
] }
ark-ff = { version = "0.5.0", default-features = false, features = [
  "parallel",
  "asm",
] }
ark-std = { version = "0.5.0", default-features = false, features = [
  "parallel",
] }
ark-bn254 = { version = "0.5.0" }
ark-groth16 = { version = "0.5.0", default-features = false, features = [
  "parallel",
] }
ark-poly = { version = "0.5.0", default-features = false, features = [
  "parallel",
] }
ark-relations = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }

# witness generation stuff
paste = { version = "1.0.15", optional = true }
rust-witness = { version = "0.1.3", optional = true }
witnesscalc-adapter = { version = "0.1.0", optional = true }

# utils
rand = "0.8.5"
eyre = "0.6.12"
serde = "1.0.217"
serde_json = "1.0.134"
num-bigint = "0.4.6"
hex = "0.4.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
